[project]
name = "common-lessons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "asyncpg>=0.30.0",
    "beanie>=2.0.1",
    "jupyter>=1.1.1",
    "motor>=3.7.1",
    "mysql-connector-python>=9.5.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.13",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "ruff>=0.14.6",
    "tortoise-orm>=0.25.1",
]
